[tool.poetry]
name = "datsart"
version = "0.1.0"
description = ""
authors = ["vsevalot <v.v.tetervak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
numpy = "^1.24.2"
pillow = "^9.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
